--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Cable Inventory Manager</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/bundle.css">
     <!-- Ionicons for Icons -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -112,18 +112,7 @@
 
     <!-- Supabase SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="assets/js/supabase.js"></script>
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/store.js"></script>
-    <!-- Utility Modules -->
-    <script src="assets/js/modules/financials.js"></script>
-    <script src="assets/js/modules/validation.js"></script>
-    <script src="assets/js/modules/csv.js"></script>
-    <!-- CRM Modules -->
-    <script src="assets/js/modules/customers.js"></script>
-    <script src="assets/js/modules/suppliers.js"></script>
-    <!-- Operations Modules -->
-    <script src="assets/js/modules/bulkOps.js"></script>
+    <script src="assets/js/bundle.js" defer></script>
     <!-- Main Application (ES6 Module) -->
     <script type="module" src="assets/js/app.js"></script>
 
